samples/_failures_safe/1761446731_0e7208_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8affcaaa.c: In function ‘main’:
./samples/SAFE/__tmp_8affcaaa.c:152:5: error: expected ‘,’ or ‘;’ at end of input
  152 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_8affcaaa.c:152:5: error: expected declaration or statement at end of input
